What's new in PinMAME:
----------------------
(see whatsnewVPM.txt for the Visual PinMAME exclusive changes!)


Version 3.4 (X X, 2021) - ""
------------------------------------------------------------------------------

*** CORE/CPU ***
Fix regression in solenoid emulation for Juegos Populares



Version 3.3 (December 24th, 2020) - "20 years already?"
------------------------------------------------------------------------------

Compiling for iOS is now possible.
Also a new platform independent lib/dll is now available with a new, simple interface to request (some of) the internal data.
Fix -listxml for strings that contain embedded tags

pinPROC : updated library;  VS2019 build
YAML-cpp: updated to 0.6.3; VS2019 build

Updated LISY support to 5.26-41 (Linux for Gottlieb System1 & System80, Bally, Atari, Williams and 'HOme' Pinballs)

Added VGM file output support for AY8910, OKI6295, OKI6376, QSound, SAA1099, YM2151, YM2203, YMF262(OPL3), YM3526, YM3812, Y8950, and SN7648/9X (unsure about the mappings for these latter ones though!) sound chips
 Either use -vgmwrite on the commmand line (PinMAME)
 or select it in the game options (this requires a restart though, as VGM output requires to track everything)

PinMAME(32): Added an Automatic Sound Dump functionality:
 Started via 'F6' (instead of the Recording function via 'F5') and 
 skips automatically to the next sound / creates a new file (in the wave subdir) if there
 is no sound at all anymore (silence) or the length reaches 4mins.
 The dump stops automatically after soundcommand 0xFF (=max 256 overall generated sounds).
 There is also an altsound CSV created with the dumps. This one can be
 altered with lucky1's Altsound Editor.

*** CORE/CPU ***
Improved Atari Generation 1 sound emulation, rewritten similar to the style of the Gen 2 one
Tweaks to Atari Generation 2 emulation, too
Added Regama driver
Wico's Af-Tor fully working now
Sped up Video Dens games, found more dip switches, switch test, saving NVRAM